--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "Home"}
   - {file: "README.md", title: "Publications"}
-  - {file: "README.md", title: "Blog"}
-  - {file: "juan_cv.md", title: "CV"}
+  - {file: "blog.md", title: "Blog"}
+  - {file: "juan_cv.pdf", title: "CV"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:jbarrag3@jh.edu"}
